--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
 
-<body>
-<div id="embedded-feed"></div>
-yam.connect.embedFeed({
-  "network": "ieseg.fr",
-  "feedType": "group",
-  "feedId": 56893898752,
-  "config": {
-    "use_sso": true,
-    "header": true,
-    "footer": true,
-    "showOpenGraphPreview": false,
-    "defaultToCanonical": false,
-    "hideNetworkName": true,
-    "promptText": "Introduce yourself..",
-    "theme": "light"
-  },
-  "container": "#embedded-feed"
-});
-</body>
+	<head>
+		<title>IESEG DataViz Challenge</title>
+		<meta charset="utf-8">
+	</head>
+
+	<body>
+		<center>
+			<a href="https://challenges.ieseg.fr/en/challenges/dataviz-challenge" target="_new"><img src="https://cdn.fs.agorize.com/wcTU4HyuROGe0Nt9g22O"></a>
+			<p style="text-align:center"> 
+				<br>
+				Heard about the <a href="https://challenges.ieseg.fr/en/challenges/dataviz-challenge" target="_new">DataViz Challenge</a>? <br>
+				Looking for a partner to compete with? Post a message below!</p>		
+
+
+			<div id="embedded-feed" style="height:800px;width:400px; margin:0 auto;">
+				<script type="text/javascript" src="https://s0-azure.assets-yammer.com/assets/platform_embed.js"></script>
+				<script type="text/javascript">
+				yam.connect.embedFeed({
+					container: "#embedded-feed",
+					network: "ieseg.fr",
+					feedType: "group",
+					feedId: "56893898752",
+					promptText: "Introduce yourself.."
+
+				});
+
+				</script>
+			</div>
+  		</center>        
+  	</body>
 </html>
