--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					    "defaultToCanonical": false,
 					    "hideNetworkName": true,
 					    "promptText": "Introduce yourself..",
-					    "theme": "light"
+					    "theme": "dark"
 					  },
 					  "container": "#embedded-feed"
 					});
